--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -2,8 +2,75 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Bakery"
+             xmlns:view="clr-namespace:Bakery.MVVM.View"
+             xmlns:viewModel="clr-namespace:Bakery.MVVM.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <!--#region Styles -->
+
+                <ResourceDictionary Source="Styles/Brushes.xaml"/>
+                <ResourceDictionary Source="Styles/Buttons.xaml"/>
+                <ResourceDictionary Source="Styles/ScrollBars.xaml"/>
+                <ResourceDictionary Source="Styles/TextBoxes.xaml"/>
+                <ResourceDictionary Source="Styles/ComboBoxes.xaml"/>
+                <ResourceDictionary Source="Styles/ListBoxes.xaml"/>
+                <ResourceDictionary Source="Styles/Sliders.xaml"/>
+                <ResourceDictionary Source="Styles/OptionsContext.xaml"/>
+
+                <!--#endregion-->
+
+            </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeCashier}">
+                <view:HomeCashier/>
+            </DataTemplate>
+
+            <!--
+            <DataTemplate DataType="{x:Type viewModel:OngoingAnimeViewModel}">
+                <view:OngoingAnimeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:InProcessAnimeViewModel}">
+                <view:InProcessAnimeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:AbandAnimeViewModel}">
+                <view:AbandAnimeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:GroupAnimeViewModel}">
+                <view:GroupAnimeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:AnimeViewModel}">
+                <view:AnimeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+                <view:SettingsView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:CharacterViewModel}">
+                <view:CharacterView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:OrdenCharacterViewModel}">
+                <view:OrdenCharacterView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SquadCharacterViewModel}">
+                <view:SquadCharacterView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShoppingCartViewModel}">
+                <view:ShoppingCartView/>
+            </DataTemplate>
+            -->
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
