--- a/Bakery/UI/Cards/PreparedFood.xaml
+++ b/Bakery/UI/Cards/PreparedFood.xaml
@@ -8,22 +8,18 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-
         <Button
             Background="Transparent"
             Width="285"
             Height="165"
             Tag="30"
             Style="{StaticResource RoundButton}">
-
             <Grid>
-
                 <Border
                     Background="{StaticResource FrontBrush}"
                     Width="280"
                     Height="150"
                     CornerRadius="30">
-
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -37,14 +33,7 @@
                             VerticalAlignment="Top"
                             Background="{StaticResource ButtonFrontBrush}"
                             CornerRadius="30 30 0 0">
-
-                            <StackPanel
-                                HorizontalAlignment="Center">
-
-                                <TextBlock Text="{Binding TCount, UpdateSourceTrigger=PropertyChanged}"/>
-
-                                <TextBlock Text="{Binding TPrice, UpdateSourceTrigger=PropertyChanged}"/>
-
+                            <StackPanel HorizontalAlignment="Center">
                                 <StackPanel.Resources>
                                     <Style TargetType="TextBlock">
                                         <Setter Property="TextAlignment" Value="Center"/>
@@ -54,9 +43,11 @@
                                         <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
                                     </Style>
                                 </StackPanel.Resources>
+                                
+                                <TextBlock Text="{Binding TCount, UpdateSourceTrigger=PropertyChanged}"/>
 
+                                <TextBlock Text="{Binding TPrice, UpdateSourceTrigger=PropertyChanged}"/>
                             </StackPanel>
-
                         </Border>
 
                         <Grid
@@ -64,7 +55,6 @@
                             Grid.Row="1"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center">
-
                             <TextBlock
                                 Text="{Binding PreparedFood.Name, UpdateSourceTrigger=PropertyChanged}"
                                 Foreground="{StaticResource TextBrush}"
@@ -73,28 +63,18 @@
                                 TextWrapping="Wrap"
                                 MaxHeight="95"
                                 FontSize="19"/>
-
                         </Grid>
-
                     </Grid>
-
                 </Border>
 
-                <Grid>
-
-                    <Button
+                <Button
                     x:Name="OptionsButton"
                     BorderThickness="0"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Right"
                     Margin="10"
                     Style="{StaticResource HorizontalOptionsButton}"/>
-
-
-                </Grid>
-
             </Grid>
-
         </Button>
 
     </Grid>
