--- a/Bakery/UI/ContextPopup/ShoppingListFoodCardPopup.xaml
+++ b/Bakery/UI/ContextPopup/ShoppingListFoodCardPopup.xaml
@@ -18,7 +18,7 @@
         <StackPanel Orientation="Vertical">
             <Path
                 Margin="30 0"
-                HorizontalAlignment="Left"/>
+                HorizontalAlignment="Right"/>
 
             <Border
                 CornerRadius="20"
