--- a/Bakery/MVVM/View/CreateOrder.xaml
+++ b/Bakery/MVVM/View/CreateOrder.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Bakery.MVVM.View.SellFood"
+﻿<Window x:Class="Bakery.MVVM.View.CreateOrder"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,10 +14,10 @@
         ResizeMode="NoResize"
         Background="Transparent"
         AllowsTransparency="True"
-        Title="Продать товар">
+        Title="Создать заказ">
 
     <Window.DataContext>
-        <viewModel:SellFood/>
+        <viewModel:CreateOrder/>
     </Window.DataContext>
 
     <Window.Resources>
@@ -32,7 +32,7 @@
             <Setter Property="Height" Value="35"/>
         </Style>
         <Style x:Key="Comb" TargetType="ComboBox" BasedOn="{StaticResource ComboBox}">
-            <Setter Property="DisplayMemberPath" Value="TFullName"/>
+            <Setter Property="DisplayMemberPath" Value="Name"/>
             <Setter Property="Height" Value="35"/>
             <Setter Property="MinWidth" Value="170"/>
         </Style>
@@ -52,7 +52,7 @@
                 FontSize="18"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Text="Продать товар"
+                Text="Создать заказ"
                 MouseDown="Border_MouseDown"/>
 
             <StackPanel
@@ -92,7 +92,7 @@
                         Orientation="Horizontal">
                         <ComboBox
                             Width="410"
-                            ItemsSource="{Binding ShowCaseList, UpdateSourceTrigger=PropertyChanged}"
+                            ItemsSource="{Binding FoodList, UpdateSourceTrigger=PropertyChanged}"
                             SelectedItem="{Binding SelectedFood, UpdateSourceTrigger=PropertyChanged}"
                             Style="{StaticResource Comb}"/>
 
@@ -105,7 +105,7 @@
                     <StackPanel Orientation="Horizontal">
                         <TextBox
                             Width="410"
-                            Text="{Binding ShowCaseSearch, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding FoodSearch, UpdateSourceTrigger=PropertyChanged}"
                             Uid="Поиск по витрине"
                             Style="{StaticResource Text}"/>
 
@@ -156,12 +156,12 @@
                             Content="Очистиь"/>
 
                         <Button
-                            Command="{Binding COM_Sell}"
-                            Content="Продать"/>
+                            Command="{Binding COM_Create}"
+                            Content="Создать"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
         </Border>
     </Grid>
-    
+
 </Window>
