- Реализована функция оформления заказа (Назначение статуса и продажа товара в случае выполнения заказа). - Обновление главной страницы после закрытия активного окна. - Мелкие визуальные исправления.

--- a/Bakery/MainWindow.xaml
+++ b/Bakery/MainWindow.xaml
@@ -28,6 +28,7 @@
             <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         </Style>
 
+        <Style TargetType="ScrollBar" BasedOn="{StaticResource ScrollBar}"/>
         <Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBox}"/>
         
         <Style TargetType="Button" BasedOn="{StaticResource RoundButton}"/>
