--- a/Bakery/UI/Cards/OrderInfo.xaml
+++ b/Bakery/UI/Cards/OrderInfo.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.UI.Cards.PreparedFood"
+﻿<UserControl x:Class="Bakery.UI.Cards.OrderInfo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -43,10 +43,10 @@
                                         <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
                                     </Style>
                                 </StackPanel.Resources>
-                                
-                                <TextBlock Text="{Binding TCount, UpdateSourceTrigger=PropertyChanged}"/>
 
-                                <TextBlock Text="{Binding TPrice, UpdateSourceTrigger=PropertyChanged}"/>
+                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <TextBlock Text="{Binding StatusName, UpdateSourceTrigger=PropertyChanged}"/>
                             </StackPanel>
                         </Border>
 
@@ -55,13 +55,29 @@
                             Grid.Row="1"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="3"/>
+                                <RowDefinition Height="40"/>
+                            </Grid.RowDefinitions>
+                            
                             <TextBlock
-                                Text="{Binding PreparedFood.Name, UpdateSourceTrigger=PropertyChanged}"
+                                Text="{Binding TStartDate, UpdateSourceTrigger=PropertyChanged}"
                                 Foreground="{StaticResource TextBrush}"
                                 VerticalAlignment="Center"
                                 TextAlignment="Center"
                                 TextWrapping="Wrap"
-                                MaxHeight="95"
+                                MaxHeight="50"
+                                FontSize="19"/>
+                            
+                            <TextBlock
+                                Grid.Row="2"
+                                Text="{Binding TTotalPrice, UpdateSourceTrigger=PropertyChanged}"
+                                Foreground="{StaticResource TextBrush}"
+                                VerticalAlignment="Center"
+                                TextAlignment="Center"
+                                TextWrapping="Wrap"
+                                MaxHeight="40"
                                 FontSize="19"/>
                         </Grid>
                     </Grid>
@@ -79,7 +95,7 @@
             </Grid>
         </Button>
 
-        <popup:PreparedFoodCardPopup
+        <popup:OrderInfoCardPopup
             MouseEnter="OptionsPopup_MouseEnter"
             MouseLeave="OptionsPopup_MouseLeave"
             Visibility="Hidden"
