- Добавлена главная страница для пекаря. - Добавлен клик для некоторых карточек. - Оптимизировано обновление данных.

--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -30,6 +30,14 @@
                 <view:HomeCashier/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:HomeBaker}">
+                <view:HomeBaker/>
+            </DataTemplate>
+
+            <!--<DataTemplate DataType="{x:Type viewModel:HomeManager}">
+                <view:HomeManager/>
+            </DataTemplate>-->
+
             <DataTemplate DataType="{x:Type viewModel:ShowOrderList}">
                 <view:ShowOrderList/>
             </DataTemplate>
