--- a/Bakery/MVVM/View/AddShowcaseOrder.xaml
+++ b/Bakery/MVVM/View/AddShowcaseOrder.xaml
@@ -1,25 +1,28 @@
-﻿<Window x:Class="Bakery.MVVM.View.AddShowcaseFood"
+﻿<Window x:Class="Bakery.MVVM.View.AddShowcaseOrder"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bakery.MVVM.View"
         xmlns:uie="clr-namespace:Bakery.UI.Elements"
+        xmlns:card="clr-namespace:Bakery.UI.Cards"
         xmlns:viewModel="clr-namespace:Bakery.MVVM.ViewModel"
         mc:Ignorable="d"
-        Height="300" Width="650"
+        Height="450" Width="650"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         ResizeMode="NoResize"
         Background="Transparent"
         AllowsTransparency="True"
-        Title="Добавить товар на витрину">
+        Title="Добавить заказ на витрину">
 
     <Window.DataContext>
-        <viewModel:AddShowcaseFood/>
+        <viewModel:AddShowcaseOrder/>
     </Window.DataContext>
 
     <Window.Resources>
+        <Style TargetType="ScrollBar" BasedOn="{StaticResource ScrollBar}"/>
+        <Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBox}"/>
         <Style TargetType="Button" BasedOn="{StaticResource RoundButton}">
             <Setter Property="Tag" Value="15"/>
             <Setter Property="Height" Value="35"/>
@@ -29,7 +32,7 @@
             <Setter Property="Height" Value="35"/>
         </Style>
         <Style x:Key="Comb" TargetType="ComboBox" BasedOn="{StaticResource ComboBox}">
-            <Setter Property="DisplayMemberPath" Value="Name"/>
+            <Setter Property="DisplayMemberPath" Value="FullName"/>
             <Setter Property="Height" Value="35"/>
             <Setter Property="MinWidth" Value="170"/>
         </Style>
@@ -49,7 +52,7 @@
                 FontSize="18"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Text="Добавить товар на витрину"
+                Text="Добавить заказ на витрину"
                 MouseDown="Border_MouseDown"/>
 
             <StackPanel
@@ -84,51 +87,46 @@
             CornerRadius="15 15 30 30">
             <Grid>
                 <StackPanel>
-                    <StackPanel
+                    <ComboBox
                         Margin="0 0 0 10"
-                        Orientation="Horizontal">
-                        <ComboBox
-                            Width="410"
-                            ItemsSource="{Binding FoodList, UpdateSourceTrigger=PropertyChanged}"
-                            SelectedItem="{Binding SelectedFood, UpdateSourceTrigger=PropertyChanged}"
-                            Style="{StaticResource Comb}"/>
-
-                        <Button
-                            Margin="30 0 0 0"
-                            Command="{Binding COM_ShowConsistency}"
-                            Content="Посмотреть состав"/>
-                    </StackPanel>
+                        ItemsSource="{Binding OrderList, UpdateSourceTrigger=PropertyChanged}"
+                        SelectedItem="{Binding SelectedOrder, UpdateSourceTrigger=PropertyChanged}"
+                        Style="{StaticResource Comb}"/>
 
                     <TextBox
-                        Text="{Binding FoodSearch, UpdateSourceTrigger=PropertyChanged}"
-                        Uid="Поиск по меню"
+                        Text="{Binding OrderSearch, UpdateSourceTrigger=PropertyChanged}"
+                        Uid="Поиск по заказам"
                         Style="{StaticResource Text}"/>
 
                     <TextBlock
                         FontSize="16"
                         FontFamily="{StaticResource Font}"
-                        Margin="0 10"
-                        Text="{Binding ShowcaseFoodCount, StringFormat='На витрине: {0} шт.'}"/>
-
-                    <TextBox
-                        Text="{Binding FoodCount, UpdateSourceTrigger=PropertyChanged}"
-                        Uid="Кол-во товара"
-                        Style="{StaticResource Text}"/>
-
-                    <StackPanel
                         Margin="0 10 0 0"
-                        HorizontalAlignment="Center"
-                        Orientation="Horizontal">
-                        <Button
-                            Margin="10 0"
-                            Command="{Binding COM_Clear}"
-                            Content="Очистиь"/>
+                        Text="Корзина товаров"/>
 
-                        <Button
-                            Margin="10 0"
-                            Command="{Binding COM_AddToShowcase}"
-                            Content="Добавить"/>
-                    </StackPanel>
+                    <ListBox
+                        Margin="0 0 0 20"
+                        Height="190"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        ItemsSource="{Binding SelectedOrder.FoodList, UpdateSourceTrigger=PropertyChanged}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <card:PreparedFood/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel VerticalAlignment="Center" Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                    </ListBox>
+                    
+                    <Button
+                        HorizontalAlignment="Right"
+                        Command="{Binding COM_AddToShowcase}"
+                        Content="Добавить"/>
                 </StackPanel>
             </Grid>
         </Border>
