- Добавлена страница с отображением продуктов на складе. - Добавлена функция списания продуктов со склада. - Добавлена функция редактирования продукта. - Исправлен шрифт в карточках.

--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -45,6 +45,10 @@
             <DataTemplate DataType="{x:Type viewModel:ShowShowcase}">
                 <view:ShowShowcase/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShowStorage}">
+                <view:ShowStorage/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
