--- a/Bakery/UI/Cards/PreparedFood.xaml
+++ b/Bakery/UI/Cards/PreparedFood.xaml
@@ -37,6 +37,7 @@
                             <StackPanel HorizontalAlignment="Center">
                                 <StackPanel.Resources>
                                     <Style TargetType="TextBlock">
+                                        <Setter Property="FontFamily" Value="{StaticResource Font}"/>
                                         <Setter Property="TextAlignment" Value="Center"/>
                                         <Setter Property="FontWeight" Value="Bold"/>
                                         <Setter Property="FontSize" Value="14"/>
@@ -57,6 +58,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center">
                             <TextBlock
+                                FontFamily="{StaticResource Font}"
                                 Text="{Binding PreparedFood.Name, UpdateSourceTrigger=PropertyChanged}"
                                 Foreground="{StaticResource TextBrush}"
                                 VerticalAlignment="Center"
