--- a/Bakery/UI/Cards/StorageProduct.xaml
+++ b/Bakery/UI/Cards/StorageProduct.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.UI.Cards.Showcase"
+﻿<UserControl x:Class="Bakery.UI.Cards.StorageProduct"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,13 +7,13 @@
              xmlns:uie="clr-namespace:Bakery.UI.Elements"
              xmlns:popup="clr-namespace:Bakery.UI.ContextPopup"
              mc:Ignorable="d" 
-             d:DesignHeight="420" d:DesignWidth="700">
+             d:DesignHeight="420" d:DesignWidth="600">
 
     <Grid
         Margin="0 20"
         Height="200"
-        Width="620">
-        <uie:CardHeader Width="600"/>
+        Width="320">
+        <uie:CardHeader Width="300"/>
 
         <Border
             VerticalAlignment="Bottom"
@@ -21,7 +21,7 @@
             CornerRadius="20"
             Padding="20"
             Height="150"
-            Width="600"
+            Width="300"
             Margin="0 0 0 20">
             <Border
                 Padding="20 10"
@@ -30,7 +30,7 @@
                 HorizontalAlignment="Center"
                 Background="{StaticResource ButtonShadowHoverBrush}"
                 Height="110"
-                Width="560">
+                Width="260">
                 <StackPanel
                     VerticalAlignment="Center"
                     Orientation="Vertical">
@@ -44,13 +44,11 @@
                     </StackPanel.Resources>
 
                     <TextBlock
-                        FontSize="20"
+                        FontSize="25"
                         HorizontalAlignment="Center"
-                        Text="{Binding PreparedFood.Name}"/>
+                        Text="{Binding Name}"/>
 
-                    <TextBlock Text="{Binding TCount, StringFormat='На витрине: {0}'}"/>
-
-                    <TextBlock Text="{Binding TPrice, StringFormat='Стоимость за штуку {0}'}"/>
+                    <TextBlock Text="{Binding TStorageWeight}"/>
                 </StackPanel>
             </Border>
         </Border>
@@ -66,7 +64,7 @@
                 LostFocus="OptionsButton_LostFocus"
                 Click="OptionsButton_Click"/>
 
-            <popup:PreparedFoodCardPopup
+            <popup:StorageProductCardPopup
                 MouseEnter="OptionsPopup_MouseEnter"
                 MouseLeave="OptionsPopup_MouseLeave"
                 Visibility="Hidden"
