- Добавлена страница просмотра всех заявок на поставку. - Реализована функция оформления заявки на поставку. - Реализована функция просмотра подробной информации о заявке. - Исправлен баг со скролбаром на страницах. - Исправлен баг со списанием продукта со склада.

--- a/Bakery/MVVM/View/ShowOrderList.xaml
+++ b/Bakery/MVVM/View/ShowOrderList.xaml
@@ -18,6 +18,7 @@
             HorizontalScrollBarVisibility="Disabled"
             VerticalScrollBarVisibility="Auto">
             <StackPanel
+                PreviewMouseWheel="StackPanel_PreviewMouseWheel"
                 VerticalAlignment="Top">
                 <StackPanel.Resources>
                     <Style TargetType="TextBlock" x:Key="Header">
