--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -49,6 +49,10 @@
             <DataTemplate DataType="{x:Type viewModel:ShowStorage}">
                 <view:ShowStorage/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShowRequest}">
+                <view:ShowRequest/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
