--- a/Bakery/MVVM/View/ShowRequest.xaml
+++ b/Bakery/MVVM/View/ShowRequest.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.MVVM.View.ShowStorage"
+﻿<UserControl x:Class="Bakery.MVVM.View.ShowRequest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,7 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.DataContext>
-        <viewModel:ShowStorage/>
+        <viewModel:ShowRequest/>
     </UserControl.DataContext>
 
     <Grid>
@@ -31,16 +31,16 @@
 
                 <TextBlock
                     Style="{StaticResource Header}"
-                    Text="{Binding StorageCount, UpdateSourceTrigger=PropertyChanged}"/>
+                    Text="{Binding ActiveRequestCount, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <ListBox
                     Background="Transparent"
                     BorderThickness="0"
-                    ItemsSource="{Binding ProductList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}">
+                    ItemsSource="{Binding ActiveRequestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}">
 
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <cardUI:StorageProduct/>
+                            <cardUI:Request/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
 
@@ -50,19 +50,19 @@
                         </ItemsPanelTemplate>
                     </ListBox.ItemsPanel>
                 </ListBox>
-                
+
                 <TextBlock
                     Style="{StaticResource Header}"
-                    Text="{Binding EmptyCount, UpdateSourceTrigger=PropertyChanged}"/>
+                    Text="{Binding RequestCount, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <ListBox
                     Background="Transparent"
                     BorderThickness="0"
-                    ItemsSource="{Binding EmptyProductList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}">
+                    ItemsSource="{Binding RequestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}">
 
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <cardUI:StorageProduct/>
+                            <cardUI:Request/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
 
