- Добавлена главная страница менеджера. - Реализована функция оформления заявки у менеджера.

--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -34,9 +34,9 @@
                 <view:HomeBaker/>
             </DataTemplate>
 
-            <!--<DataTemplate DataType="{x:Type viewModel:HomeManager}">
+            <DataTemplate DataType="{x:Type viewModel:HomeManager}">
                 <view:HomeManager/>
-            </DataTemplate>-->
+            </DataTemplate>
 
             <DataTemplate DataType="{x:Type viewModel:ShowOrderList}">
                 <view:ShowOrderList/>
