--- a/Bakery/UI/ContextPopup/EmployeeCardPopup.xaml
+++ b/Bakery/UI/ContextPopup/EmployeeCardPopup.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.UI.ContextPopup.ManagerPopup"
+﻿<UserControl x:Class="Bakery.UI.ContextPopup.EmployeeCardPopup"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,12 +13,13 @@
             <EventSetter Event="Click" Handler="CloseElement"/>
         </Style>
     </UserControl.Resources>
-    
+
     <Grid>
         <StackPanel Orientation="Vertical">
             <Path
                 Margin="30 0"
-                HorizontalAlignment="Left"/>
+                HorizontalAlignment="Right"/>
+
             <Border
                 CornerRadius="20"
                 Width="205"
@@ -27,23 +28,17 @@
                 <Border
                     Style="{StaticResource OptionsDropDownBorder}"
                     HorizontalAlignment="Center">
-                    <StackPanel
-                        VerticalAlignment="Center">
+                    <StackPanel VerticalAlignment="Center">
                         <Button
-                            Command="{Binding COM_ManageRequest}"
-                            Content="Оформить заявку"/>
+                            Command="{Binding COM_OpenInfo}"
+                            Content="Подробная информация"/>
 
                         <Button
-                            Command="{Binding COM_DeliveryProduct}"
-                            Content="Заказать продукты"/>
-
-                        <Button
-                            Command="{Binding COM_DeliveryRequestProduct}"
-                            Content="Заказать продукты по заявке"/>
+                            Command="{Binding COM_Redact}"
+                            Content="Редактировать"/>
                     </StackPanel>
                 </Border>
             </Border>
         </StackPanel>
-
     </Grid>
 </UserControl>
