--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -53,6 +53,14 @@
             <DataTemplate DataType="{x:Type viewModel:ShowRequest}">
                 <view:ShowRequest/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShowProviders}">
+                <view:ShowProviders/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShowDelivery}">
+                <view:ShowDelivery/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
