- Добавлена страница с отображением всех сотрудников. - Добавлена возможность открыть личный кабинет пользователя. - Реализована функция просмотра подробной информации о сотруднике. - Реализована функция редактирования сотрудника.

--- a/Bakery/App.xaml
+++ b/Bakery/App.xaml
@@ -61,6 +61,10 @@
             <DataTemplate DataType="{x:Type viewModel:ShowDelivery}">
                 <view:ShowDelivery/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ShowEmployees}">
+                <view:ShowEmployees/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
