- Добавлено окно входа в аккаунт. - Добавлена возможность выхода из аккаунта. - Добавлены проверки на тип аккаунта при переходах по окнам. - Улучшена связь приложения с базой данных - Добавлены клики на некоторые карточки. - Изменены иконки кнопок на главном окне.

--- a/Bakery/UI/Cards/ActiveEmployee.xaml
+++ b/Bakery/UI/Cards/ActiveEmployee.xaml
@@ -14,6 +14,7 @@
             Width="285"
             Height="165"
             Tag="30"
+            Command="{Binding COM_OpenInfo}"
             Style="{StaticResource RoundButton}">
             <Grid>
                 <Border
