--- a/Bakery/MVVM/View/AddShowcaseFood.xaml
+++ b/Bakery/MVVM/View/AddShowcaseFood.xaml
@@ -122,7 +122,7 @@
                         <Button
                             Margin="10 0"
                             Command="{Binding COM_Clear}"
-                            Content="Очистиь"/>
+                            Content="Очистить"/>
 
                         <Button
                             Margin="10 0"
