--- a/Bakery/MVVM/View/CreateDeliveryRequestProduct.xaml
+++ b/Bakery/MVVM/View/CreateDeliveryRequestProduct.xaml
@@ -138,7 +138,7 @@
                         <Button
                             Margin="20 0"
                             Command="{Binding COM_Clear}"
-                            Content="Очистиь"/>
+                            Content="Очистить"/>
 
                         <Button
                             Command="{Binding COM_CreateDelivery}"
